# play_with_raspberry_pi

./: .gitignore  AQM0802A.md  Gemfile  README.md  pyproject.toml
python/: Dockerfile  docker-compose.yml  pyproject.toml
python/doc/: time_attacker.md
python/src/: display_ip_address.py  gpio.py  main.py  pyproject.toml  time_attack.py  time_attacker.py
python/src/device/: aqm0802a.py  ssd1306.py
python/src/device/display/: a_574sr_lf.py
ruby/src/lcd/: sc1602bslb-xa-gb-k.rb
ruby/src/script/: attendance_record_mf02a.rb  display_ipaddress_aqm08002a.rb
ruby/src/sensor/pressure/: mf02a.rb
src/common/: gpio.py
src/lcd/: aqm0802a.rb  sc1602bslb-xa-gb-k.py
src/script/display_ipaddress_aqm08002a/: display_ipaddress_aqm08002a.service  main.rb
