[tool.poetry]
name = "play_with_raspberry_pi"
version = "0.1.0"
description = ""
authors = ["koba-masa <kobayashi_mshr@koba-masa.com>"]

[tool.poetry.dependencies]
python = "^3.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
