[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["koba-masa <kobayashi_mshr@koba-masa.com>"]

[tool.poetry.dependencies]
python = "^3.9"
adafruit-circuitpython-ssd1306 = "^2.12.8"
"RPi.GPIO" = "^0.7.1"
board = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
